force-app/main/default/objects/Peak_Apex_Log__c.object
<CustomObject>
    <description>Apex Log is a framework to capture info, warnings, and errors in a configurable framework that does not require a user with “Customize Application” to view.  It allows for class-level, user-level, profile-level, and organization wide settings.</description>
    <fields>
        <fullName>Class__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Class or process, matching the Name of a record in the custom metadata type Apex Log Class Manager</inlineHelpText>
        <label>Class</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Content</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Log_Level__c</fullName>
        <label>Log Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ERROR</fullName>
                </value>
                <value>
                    <fullName>WARNING</fullName>
                </value>
                <value>
                    <fullName>INFO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Method__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Apex Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Class__c</columns>
        <columns>Content__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Errors</fullName>
        <columns>NAME</columns>
        <columns>Log_Level__c</columns>
        <columns>Class__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Content__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Log_Level__c</field>
            <operation>equals</operation>
            <value>ERROR</value>
        </filters>
        <label>Errors</label>
    </listViews>
    <listViews>
        <fullName>Registration</fullName>
        <columns>NAME</columns>
        <columns>Class__c</columns>
        <columns>Log_Level__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Class__c</field>
            <operation>equals</operation>
            <value>Registration</value>
        </filters>
        <label>Registration</label>
    </listViews>
    <nameField>
        <displayFormat>L-{0}</displayFormat>
        <label>Apex Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Apex Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>No_Updates_Allowed</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISNEW())</errorConditionFormula>
        <errorMessage>Updates to logs are explicitly disallowed to guarantee log integrity.</errorMessage>
    </validationRules>
</CustomObject>