force-app/main/default/objects/Peak_Apex_Log__c/validationRules/No_Updates_Allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Updates_Allowed</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISNEW())</errorConditionFormula>
    <errorMessage>Updates to logs are explicitly disallowed to guarantee log integrity.</errorMessage>
</ValidationRule>