force-app/main/default/objects/Peak_Apex_Log__c/listViews/Errors.listView-meta.xml
<ListView>
    <fullName>Errors</fullName>
    <columns>NAME</columns>
    <columns>Log_Level__c</columns>
    <columns>Class__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Content__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Log_Level__c</field>
        <operation>equals</operation>
        <value>ERROR</value>
    </filters>
    <label>Errors</label>
</ListView>