force-app/main/default/objects/Peak_Apex_Log__c/listViews/Registration.listView-meta.xml
<ListView>
    <fullName>Registration</fullName>
    <columns>NAME</columns>
    <columns>Class__c</columns>
    <columns>Log_Level__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Class__c</field>
        <operation>equals</operation>
        <value>Registration</value>
    </filters>
    <label>Registration</label>
</ListView>